fixed hamburger nav and removed unneccessary dashboard styles

--- a/pages/report-data.html
+++ b/pages/report-data.html
@@ -1,4 +1,74 @@
 <!-- <a href="#/report" exact="active-link"> Back to report </a> -->
+<div class="report-data-container">
+  <div class="report-data-header">
+    <h1>Reports</h1>
+    <div class="report-data-date-range">
+      <label for="startDate">Showing data from:</label>
+      <input type="date" id="startDate" />
+      <input type="date" id="endDate" />
+    </div>
+    <div class="report-data-actions">
+      <button class="report-data-back">Back To Report</button>
+      <button class="report-data-export">Export Report</button>
+    </div>
+  </div>
+
+  <div class="report-data-sales">
+    <h2>Sales Report</h2>
+    <div class="report-data-cards">
+      <div class="report-data-card">
+        <img src="icon1.png" alt="Products Bought Icon" />
+        <div class="report-data-card-info">
+          <h3>134</h3>
+          <p>Products Bought</p>
+          <span>+6</span>
+        </div>
+        <div class="report-data-card-breakdown">
+          <button>See Breakdown</button>
+        </div>
+      </div>
+
+      <div class="report-data-card">
+        <img src="icon2.png" alt="Active Policies Icon" />
+        <div class="report-data-card-info">
+          <h3>78</h3>
+          <p>Active Policies</p>
+          <span>+6</span>
+        </div>
+        <div class="report-data-card-breakdown">
+          <p>Corporate: 10</p>
+          <p>Individual: 40</p>
+        </div>
+      </div>
+
+      <div class="report-data-card">
+        <img src="icon3.png" alt="Drop Offs Icon" />
+        <div class="report-data-card-info">
+          <h3>20</h3>
+          <p>Drop Offs</p>
+          <span>-6</span>
+        </div>
+        <div class="report-data-card-breakdown">
+          <p>Corporate: 5</p>
+          <p>Individual: 15</p>
+        </div>
+      </div>
+
+      <div class="report-data-card">
+        <img src="icon4.png" alt="In Progress Icon" />
+        <div class="report-data-card-info">
+          <h3>5</h3>
+          <p>In Progress</p>
+          <span>-6</span>
+        </div>
+        <div class="report-data-card-breakdown">
+          <p>Corporate: 1</p>
+          <p>Individual: 4</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 <div>
   report data page
