--- a/pages/report.html
+++ b/pages/report.html
@@ -77,7 +77,7 @@
         <div class="report-top-products">
           <div class="view-report">
             <h3>Top Products</h3>
-            <a href="#report/report-data" class="view2"
+            <a href="#/report/report-data" class="view2"
               >View Report</a
             >
           </div>
