added prospectLbl class to line 107 text are

--- a/pages/prospect.html
+++ b/pages/prospect.html
@@ -1,14 +1,122 @@
-<!-- All buttons you will need 👇 -->
-
-<!-- <a href="#/prospect/create-prospect" exact="active-link">
-  create prospect
-</a>
-<a href="#/prospect/ongoing-prospect" exact="active-link">
-  ongoing
-</a>
-<a href="#/prospect/ongoing-prospect" exact="active-link"> view </a> -->
+<!-- <a href="#/prospect" exact="active-link"> cancel button </a> -->
 
 <div>
-    <p>prospect page</p>
-<!-- your work goes here -->
+  <h2 class="prospectH2">Create a New Prospect</h2>
+  <div class="creationTypOptSect">
+    <div class="creationTypOptP" style="color: #34475e">
+      <div class="creationTypOptHeader">
+        <h4>Select creation type</h4>
+        <span style="color: #002855">
+          <a
+            href="#/prospect"
+            exact="active-link"
+            style="color: #002855"
+            >Cancel</a
+          >
+        </span>
+      </div>
+      <div class="inpTyps">
+        <div class="inpTyp">
+          <input type="radio" name="upload" id="individual" class="radioInput">
+          <label for="individual" class="prospectLbl">Individual</label>
+        </div>
+        <div class="inpTyp">
+          <input type="radio" name="upload" id="bulkUpload" class="radioInput">
+          <label for="bulkUpload" class="prospectLbl">Bulk Upload</label>
+        </div>
+      </div>
+    </div>
+    <div class="createProspectFormDiv">
+      <form action="" class="createProspectForm">
+        <h4 style="color: #32404F; margin-block: 2.5rem; font-weight: 500;">Fill prospect information</h4>
+        <div class="prospectInpFormPDiv">
+          <div class="prospectInpChildDiv">
+            <label for="fName" class="prospectLbl">First Name</label>
+            <input type="text" name="fName" id="fName" class="prospectInp">
+          </div>
+          <div class="prospectInpChildDiv">
+            <label for="lName" class="prospectLbl">Last Name</label>
+            <input type="text" name="lName" id="lName" class="prospectInp">
+          </div>
+          <div class="prospectInpChildDiv">
+            <label for="prdct" class="prospectLbl">Product Interest</label>
+            <div>
+              <input type="text" name="prdct" id="prdct" class="prospectInp">
+              <i class="fa-solid fa-circle-chevron-down" style="color: #34475E;"></i>
+            </div>
+          </div>
+          <div class="prospectInpChildDiv">
+            <label for="email" class="prospectLbl">Email</label>
+            <input type="email" name="email" id="email" class="prospectInp">
+          </div>
+          <div class="prospectInpChildDiv">
+            <label for="phoneNo" class="prospectLbl">Phone Number</label>
+            <input type="text" name="phoneNo" id="phoneNo" class="prospectInp">
+          </div>
+          <div class="prospectInpChildDiv location">
+            <div class="">
+              <label for="state" class="prospectLbl">State</label>
+              <input type="text" name="state" id="state" class="prospectInp">
+            </div>
+            <div class="">
+              <label for="city" class="prospectLbl">City</label>
+              <input type="text" name="city" id="city" class="prospectInp">
+            </div>
+          </div>
+          <div class="prospectInpChildDiv">
+            <label for="ocptn" class="prospectLbl">Occupation</label>
+            <input type="text" name="ocptn" id="ocptn" class="prospectInp">
+          </div>
+          <div class="prospectInpChildDiv">
+            <div>
+              <span for="gender">Gender</span>
+              <div class="genderOpts">
+                <div class="inpTyp">
+                  <input type="radio" name="gender" id="male" class="radioInput">
+                  <label for="male" class="prospectLbl">Male</label>
+                </div>
+                <div class="inpTyp">
+                  <input type="radio" name="gender" id="female" class="radioInput">
+                  <label for="female" class="prospectLbl">Male</label>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button type="submit" class="createPrspctBtn" id="createPrspctBtn">
+          <a href="#">Create Prospect</a>
+        </button>
+      </form>
+    </div>
+
+    <!-- Bulk Upload section -->
+
+    <div class="bulkUploadSect">
+      <h2>Bulk Upload</h2>
+      <p class="clxWarningP">
+        Please ensure the file is in excel (.XLS) format
+      </p>
+      <div class="bulkUploadTxtareaDiv">
+        <textarea name="bulkUploadTxtarea" id="bulkUploadTxtarea">
+        </textarea>
+        <div class="positionA">
+          <div class="cloudDiv">
+            <img src="../assets/cloudIcon.svg" alt="" />
+          </div>
+          <div>
+            <label for="attachDoc" id="attachDocLbl" class="prospectLbl"
+              ><span style="color: #e6b014">Select file</span> or drag
+              and drop</label
+            >
+            <input type="file" name="attachDoc" id="attachDoc" />
+            <p class="clxWarningP">CSV or .XLSX file</p>
+          </div>
+        </div>
+      </div>
+      <button type="submit" class="downloadExlBtn">
+        <a href="#">Download excel template</a>
+      </button>
+    </div>
+  </div>
 </div>
+<script src="/js/create-prospect.js"></script>
