added prospectLbl class to line 107 text area

--- a/pages/create-prospect.html
+++ b/pages/create-prospect.html
@@ -104,7 +104,7 @@
             <img src="../assets/cloudIcon.svg" alt="" />
           </div>
           <div>
-            <label for="attachDoc" id="attachDocLbl"
+            <label for="attachDoc" id="attachDocLbl" class="prospectLbl"
               ><span style="color: #e6b014">Select file</span> or drag
               and drop</label
             >
