added success alert popup and input classes

--- a/pages/create-prospect.html
+++ b/pages/create-prospect.html
@@ -84,7 +84,7 @@
               </div>
             </div>
           </div>
-          <button type="button" class="createPrspctBtn">
+          <button type="button" class="createPrspctBtn" id="createPrspctBtn">
             Create Prospect
           </button>
         </form>
