Responsiveness Done and Account settings page COMPLETED

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -137,7 +137,7 @@
         <h2>Change Password</h2>
         <div class="form-wrapper">
           <div id="change-password-form" class="form-container">
-            <form>
+            <form class="form">
               <label for="old-password">Old Password</label>
               <input
                 type="password"
