Added javascript to ongoing-prospect.html and made it responsive

--- a/pages/ongoing-prospect.html
+++ b/pages/ongoing-prospect.html
@@ -6,7 +6,7 @@
   <div class="ongoingProspectHeader">
     <h1>Prospects</h1>
     <div class="ongoingProspectImgWithText">
-      <img src="../assets/eva_arrow-back-outline.svg" />
+      <img src="../assets/Vector (6).svg" />
       <p>Back to prospect</p>
     </div>
   </div>
@@ -15,7 +15,7 @@
   <div class="profileCard">
     <div class="profileHeader">
       <img
-        src="../assets/profileImg.svg"
+        src="../assets/Ellipse 47.svg"
         alt="Profile Image"
         class="profile-image"
       />
@@ -65,7 +65,7 @@
       </div>
     </div>
     <div class="topImg">
-      <img src="../assets/top.svg" />
+      <img src="../assets/Group 1856.svg" />
     </div>
   </div>
   <!-- activity and chat button -->
@@ -77,44 +77,44 @@
   <div class="activitySummaryTable">
     <h2>Activity Summary Today</h2>
     <div class="summaryTable">
-      <div class="summartTableContent">
+      <div class="summaryTableContent">
         <div class="summaryText">
-          <img src="../assets/Ellipse 107.svg" />
+          <img src="../assets/Ellipse 107 (1).svg" />
           <p>Seyi Olanrewaju scheduled a meeting with the prospects</p>
         </div>
         <span>9:35am</span>
       </div>
-      <div class="summartTableContent">
+      <div class="summaryTableContent">
         <div class="summaryText">
-          <img src="../assets/Ellipse 107.svg" />
+          <img src="../assets/Ellipse 107 (1).svg" />
           <p>Seyi Olanrewaju scheduled a meeting with the prospects</p>
         </div>
         <button class="summaryBtnView">view</button>
       </div>
-      <div class="summartTableContent">
+      <div class="summaryTableContent">
         <div class="summaryText">
-          <img src="../assets/Ellipse 107.svg" />
+          <img src="../assets/Ellipse 107 (1).svg" />
           <p>Seyi Olanrewaju scheduled a meeting with the prospects</p>
         </div>
         <span>9:35am</span>
       </div>
-      <div class="summartTableContent">
+      <div class="summaryTableContent">
         <div class="summaryText">
-          <img src="../assets/Ellipse 107.svg" />
+          <img src="../assets/Ellipse 107 (1).svg" />
           <p>Seyi Olanrewaju scheduled a meeting with the prospects</p>
         </div>
         <span>9:35am</span>
       </div>
-      <div class="summartTableContent">
+      <div class="summaryTableContent">
         <div class="summaryText">
-          <img src="../assets/Ellipse 107.svg" />
+          <img src="../assets/Ellipse 107 (1).svg" />
           <p>Seyi Olanrewaju scheduled a meeting with the prospects</p>
         </div>
         <span>9:35am</span>
       </div>
-      <div class="summartTableContent">
+      <div class="summaryTableContent">
         <div class="summaryText">
-          <img src="../assets/Ellipse 107.svg" />
+          <img src="../assets/Ellipse 107 (1).svg" />
           <p>Seyi Olanrewaju scheduled a meeting with the prospects</p>
         </div>
         <span>9:35am</span>
@@ -128,7 +128,7 @@
         <div class="chatBox">
           <p class="dateOngoing">04 Jan 2024</p>
           <div class="chatText">
-            <img src="../assets/Ellipse 109.svg" />
+            <img src="../assets/Ellipse 109 (1).svg" />
             <p>The Prospect would like a customised <br />product</p>
           </div>
         </div>
@@ -137,7 +137,7 @@
         <div class="chatBox">
           <p class="dateOngoing">04 Jan 2024</p>
           <div class="chatText">
-            <img src="../assets/Ellipse 109.svg" />
+            <img src="../assets/Ellipse 109 (1).svg" />
             <p>The Prospect would like a customised <br />product</p>
           </div>
         </div>
@@ -148,21 +148,24 @@
       <div class="chatBox">
         <p class="date2">04 Jan 2024</p>
         <div class="chatText2">
-          <img src="../assets/Ellipse 109.svg" />
-          <p class="lastText">The Prospect would like a customised <br />product</p>
+          <img src="../assets/Rectangle 819.svg" />
+          <p class="lastText">
+            The Prospect would like a customised <br />product
+          </p>
         </div>
       </div>
     </div>
-    
   </div>
+
   <!-- input button -->
-   <div class="inputOverallContainer">
-  <div class="inputContainer">
-    <img src="../assets/HAPPYEMOJI.svg" alt="Emoji Icon">
-    <img src="../assets/CROSS.svg" alt="Plus Icon">
-    <input type="text" placeholder="Say Something...">
-    <img src="../assets/Voice.svg" alt="Microphone Icon">
-</div>
-</div>
+  <div class="inputOverallContainer">
+    <div class="inputContainer">
+      <img src="../assets/HAPPYEMOJI.svg" alt="Emoji Icon" />
+      <img src="../assets/CROSS.svg" alt="Plus Icon" />
+      <input type="text" placeholder="Say Something..." />
+      <img src="../assets/Voice.svg" alt="Microphone Icon" />
+    </div>
+  </div>
 
-
+  <script src="../js/ongoing-prospect.js"></script>
+</div>
