--- a/pages/report-data.html
+++ b/pages/report-data.html
@@ -133,8 +133,9 @@
       <div class="settings"></div>
       <button>incoming</button>
     </div>
-
-    <canvas id="myChart" width="100%"></canvas>
+    <div class="chartBox">
+      <canvas id="myChart"></canvas>
+    </div>
     <!-- your work goes in here -->
   </div>
 </div>
