--- a/index.html
+++ b/index.html
@@ -58,5 +58,6 @@
     <script src="/js/entry.js"></script>
     <script src="/js/routes.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
   </body>
 </html>
